# openinfer

./: .gitignore  .gitmodules  .oirc  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  model.oinf  ops.json  requirements.txt  settings.json  verify_oinf.py
openinfer/: Cargo.toml  build.rs
openinfer-generator/: Cargo.toml
openinfer-generator/src/: lib.rs  op_schema.rs
openinfer-generator/src/opspec/: build_opspec.rs  clean_opspec.rs  op_schema.rs
openinfer-generator/src/settings/: settings.rs
openinfer-generator/src/spv/: build_spv.rs  clean_spv.rs  vulkan_spv.rs
openinfer/examples/: minimal.rs
openinfer/generator/: mod.rs  op_schema.rs  settings.rs
openinfer/src/: backend.rs  executor.rs  formatting.rs  graph.rs  graph_serde.rs  lib.rs  logging.rs  macros.rs  model_loader.rs  op_defs.rs  prefix.rs  random.rs  simulator.rs  tensor.rs  timer.rs  types.rs
openinfer/src/backend/cpu/: broadcast.rs  mod.rs  scheduler.rs
openinfer/src/backend/vulkan/: broadcast.rs  mod.rs  runtime.rs  scheduler.rs
openinfer/src/backend/vulkan/broadcast/: broadcast.slang
openinfer/src/executor/: cpu.rs  mod.rs  vulkan.rs
openinfer/src/graph/: mod.rs  node.rs  serde.rs  types.rs  var.rs
openinfer/src/ops/: adapter.rs  cpu.rs  cpu_avx.rs  cpu_avx2.rs  mod.rs  registry.rs  vulkan.rs
openinfer/src/ops/cpu/: accumulate.rs  broadcast.rs  compare.rs  data_helper.rs  elementwise.rs  mod.rs  packed.rs  packed_cpu.rs  packed_ops.rs  reduce.rs  registry.rs  registry_accumulate.rs  registry_helpers.rs  registry_inplace.rs
openinfer/src/ops/cpu/abs/: abs.rs  abs_accumulate.rs  abs_inplace.rs  kernel.rs  mod.rs  registry.rs  registry_accumulate.rs  registry_inplace.rs
openinfer/src/ops/cpu/add/: accumulate.rs  add.rs  add_accumulate.rs  add_inplace.rs  common.rs  kernel.rs  mod.rs  normal.rs  packed.rs  registry.rs  registry_accumulate.rs  registry_inplace.rs  wrappers.rs
openinfer/src/ops/cpu/argmax_axis/: kernel.rs  registry.rs
openinfer/src/ops/cpu/arithmetic/: mod.rs
openinfer/src/ops/cpu/cast/: registry.rs
openinfer/src/ops/cpu/ceil/: kernel.rs
openinfer/src/ops/cpu/clamp/: kernel.rs  registry.rs
openinfer/src/ops/cpu/div/: kernel.rs
openinfer/src/ops/cpu/fill/: fill.rs  fill_accumulate.rs  kernel.rs  mod.rs  registry.rs  registry_accumulate.rs  registry_inplace.rs
openinfer/src/ops/cpu/filter/: kernel.rs
openinfer/src/ops/cpu/floor/: kernel.rs  registry.rs
openinfer/src/ops/cpu/floor_div/: registry.rs
openinfer/src/ops/cpu/fma/: kernel.rs  registry.rs
openinfer/src/ops/cpu/ge/: registry.rs
openinfer/src/ops/cpu/is_finite/: is_finite.rs  is_finite_accumulate.rs  kernel.rs  mod.rs  registry.rs  registry_accumulate.rs
openinfer/src/ops/cpu/is_inf/: mod.rs
openinfer/src/ops/cpu/is_nan/: kernel.rs
openinfer/src/ops/cpu/is_neg/: kernel.rs
openinfer/src/ops/cpu/le/: registry.rs
openinfer/src/ops/cpu/matmul/: kernel.rs  matmul.rs  matmul_accumulate.rs  matmul_inplace.rs  mod.rs  registry.rs  registry_accumulate.rs  registry_inplace.rs
openinfer/src/ops/cpu/max/: kernel.rs
openinfer/src/ops/cpu/mean_axis/: registry.rs
openinfer/src/ops/cpu/min/: kernel.rs  registry.rs
openinfer/src/ops/cpu/min_axis/: kernel.rs
openinfer/src/ops/cpu/mul/: kernel.rs  mod.rs  mul.rs  mul_accumulate.rs  mul_inplace.rs  registry.rs  registry_accumulate.rs  registry_inplace.rs
openinfer/src/ops/cpu/ne/: kernel.rs
openinfer/src/ops/cpu/neg/: kernel.rs
openinfer/src/ops/cpu/numerical/: mod.rs
openinfer/src/ops/cpu/popcount/: kernel.rs
openinfer/src/ops/cpu/prod_axis/: kernel.rs
openinfer/src/ops/cpu/recip/: registry.rs
openinfer/src/ops/cpu/relu/: kernel.rs  mod.rs  registry.rs  registry_accumulate.rs  registry_inplace.rs  relu.rs  relu_accumulate.rs  relu_inplace.rs
openinfer/src/ops/cpu/rem/: registry.rs
openinfer/src/ops/cpu_avx/: mod.rs  packed.rs  registry.rs  registry_inplace.rs
openinfer/src/ops/cpu_avx2/: mod.rs  registry.rs  registry_helpers.rs  registry_inplace.rs
openinfer/src/ops/vulkan/: broadcast.rs  common.rs  descriptor.rs  dispatch.rs  float_utils.slang  mod.rs  op_common.slang  op_helpers.rs  packed_utils.slang  registry.rs  registry_accumulate.rs  registry_inplace.rs  runtime.rs  shaders.json  spv.rs  staging_buffer.rs  tensor_bytes.rs
openinfer/src/registry/: mod.rs  op_attrs.rs  op_defs.rs  op_dtypes.rs  var_attrs.rs
openinfer/src/registry/add/: matcher.rs  mod.rs
openinfer/src/registry/op_dtypes/: abs_dtypes.rs  add_dtypes.rs  and_dtypes.rs  argmax_axis_dtypes.rs  argmin_axis_dtypes.rs  cast_dtypes.rs  ceil_dtypes.rs  clamp_dtypes.rs  div_dtypes.rs  eq_dtypes.rs  fill_dtypes.rs  filter_dtypes.rs  floor_div_dtypes.rs  floor_dtypes.rs  fma_dtypes.rs  ge_dtypes.rs  gt_dtypes.rs  is_finite_dtypes.rs  is_inf_dtypes.rs  is_nan_dtypes.rs  is_neg_dtypes.rs  le_dtypes.rs  lt_dtypes.rs  matmul_dtypes.rs  max_axis_dtypes.rs  max_dtypes.rs  mean_axis_dtypes.rs  min_axis_dtypes.rs  min_dtypes.rs  mul_dtypes.rs  ne_dtypes.rs  neg_dtypes.rs  not_dtypes.rs  or_dtypes.rs  popcount_dtypes.rs  prod_axis_dtypes.rs  recip_dtypes.rs  relu_dtypes.rs  rem_dtypes.rs  round_dtypes.rs  (+7 more)
openinfer/src/runtime/: async_scheduler.rs  control_flow.rs  engine.rs  executor.rs  mod.rs  model_loader.rs  op_runner.rs  state.rs  tensor_store.rs  trace.rs  validation.rs  value_eval.rs  yield_await.rs
openinfer/src/runtime/cache/: auto_dim.rs  mod.rs  store.rs  table.rs  utils.rs
openinfer/src/runtime/executor/: fetch.rs  iter.rs  mod.rs
openinfer/src/runtime/state/: cache.rs  exec.rs  mod.rs  shared.rs  vars.rs
openinfer/src/runtime/validation/: attrs.rs  blocks.rs  cache.rs  context.rs  control_flow.rs  ops.rs  vars.rs
openinfer/src/simulator/: executor.rs
openinfer/src/simulator/executor/: cache.rs  dispatch.rs  frames.rs  mod.rs  prefix.rs  tensor_utils.rs  trace.rs
openinfer/src/simulator/validation/: attrs.rs  block.rs  dims.rs  graph.rs  mod.rs  prefix.rs  vars.rs
openinfer/src/tensor/: mod.rs  scalar.rs  scalar_value.rs  shape.rs  tensor.rs  value.rs
openinfer/src/types/cpu/: mod.rs
openinfer/src/types/vulkan/: mod.rs
(+1710 files in other folders)
