[package]
name = "openinfer-generator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
ash = "0.38.0"
serde_json = "1"
syn = { version = "2", features = ["full"] }

[[bin]]
name = "build_opspec"
path = "src/opspec/build_opspec.rs"

[[bin]]
name = "clean_opspec"
path = "src/opspec/clean_opspec.rs"

[[bin]]
name = "build_spv"
path = "src/spv/build_spv.rs"

[[bin]]
name = "clean_spv"
path = "src/spv/clean_spv.rs"
