[package]
name = "openinfer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ash = { version = "0.37", optional = true }
openinfer-dsl = { path = "../openinfer-dsl" }
rand = "0.8"

[dev-dependencies]

[features]
vulkan = ["ash"]
avx = []
avx2 = []

[build-dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[example]]
name = "minimal"
path = "../examples/rust/minimal.rs"

[[example]]
name = "graph_nodes_traverse"
path = "../examples/rust/graph_nodes_traverse.rs"

[[example]]
name = "trace_example"
path = "../examples/rust/trace_example.rs"

[[example]]
name = "serialize"
path = "../examples/rust/serialize.rs"

[[example]]
name = "deserialize"
path = "../examples/rust/deserialize.rs"

[[example]]
name = "relu"
path = "../examples/rust/relu.rs"

[[example]]
name = "multidim_broadcast"
path = "../examples/rust/multidim_broadcast.rs"

[[example]]
name = "reference"
path = "../examples/rust/reference.rs"

[[example]]
name = "prefix_table"
path = "../examples/rust/prefix_table.rs"

[[example]]
name = "loop"
path = "../examples/rust/loop.rs"

[[example]]
name = "worst_case"
path = "../examples/rust/worst_case.rs"

[[example]]
name = "cache_scalar"
path = "../examples/rust/cache_scalar.rs"

[[example]]
name = "cache_table"
path = "../examples/rust/cache_table.rs"

[[example]]
name = "cache_auto_dim"
path = "../examples/rust/cache_auto_dim.rs"

[[example]]
name = "cache_weight_update"
path = "../examples/rust/cache_weight_update.rs"

[[example]]
name = "cache_fixed_limit"
path = "../examples/rust/cache_fixed_limit.rs"

[[example]]
name = "branching_good"
path = "../examples/rust/branching_good.rs"

[[example]]
name = "branching_bad"
path = "../examples/rust/branching_bad.rs"

[[example]]
name = "ops_matrix"
path = "../examples/rust/ops_matrix.rs"

[[example]]
name = "yield"
path = "../examples/rust/yield.rs"

[[example]]
name = "dtypes"
path = "../examples/rust/dtypes.rs"

[[example]]
name = "accumulate_packed"
path = "../examples/rust/accumulate_packed.rs"

[[example]]
name = "ops_accumulate_inplace"
path = "../examples/rust/ops_accumulate_inplace.rs"

[[example]]
name = "ops_broadcast_variants"
path = "../examples/rust/ops_broadcast_variants.rs"

[[example]]
name = "f16_benchmark"
path = "../examples/rust/f16_benchmark.rs"