[package]
name = "openinfer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openinfer-dsl = { path = "../openinfer-dsl" }
rand = "0.8"
memmap2 = "0.9"
rayon = "*"
once_cell = "1"
bytemuck = { version = "1", features = ["derive"] }
ash = "0.38.0"

[build-dependencies]
openinfer-generator = { path = "../openinfer-generator" }

[dev-dependencies]

[features]
vulkan = []

[[example]]
name = "minimal"
path = "../examples/openinfer/minimal.rs"

[[example]]
name = "graph_nodes_traverse"
path = "../examples/openinfer/graph_nodes_traverse.rs"

[[example]]
name = "trace_example"
path = "../examples/openinfer/trace_example.rs"

[[example]]
name = "serialize"
path = "../examples/openinfer/serialize.rs"

[[example]]
name = "deserialize"
path = "../examples/openinfer/deserialize.rs"

[[example]]
name = "relu"
path = "../examples/openinfer/relu.rs"

[[example]]
name = "multidim_broadcast"
path = "../examples/openinfer/multidim_broadcast.rs"

[[example]]
name = "reference"
path = "../examples/openinfer/reference.rs"

[[example]]
name = "prefix_table"
path = "../examples/openinfer/prefix_table.rs"

[[example]]
name = "loop"
path = "../examples/openinfer/loop.rs"

[[example]]
name = "worst_case"
path = "../examples/openinfer/worst_case.rs"

[[example]]
name = "cache_scalar"
path = "../examples/openinfer/cache_scalar.rs"

[[example]]
name = "cache_table"
path = "../examples/openinfer/cache_table.rs"

[[example]]
name = "cache_auto_dim"
path = "../examples/openinfer/cache_auto_dim.rs"

[[example]]
name = "cache_weight_update"
path = "../examples/openinfer/cache_weight_update.rs"

[[example]]
name = "cache_fixed_limit"
path = "../examples/openinfer/cache_fixed_limit.rs"

[[example]]
name = "branching_good"
path = "../examples/openinfer/branching_good.rs"

[[example]]
name = "branching_bad"
path = "../examples/openinfer/branching_bad.rs"

[[example]]
name = "ops_matrix"
path = "../examples/openinfer/ops_matrix.rs"

[[example]]
name = "yield"
path = "../examples/openinfer/yield.rs"

[[example]]
name = "dtypes"
path = "../examples/openinfer/dtypes.rs"

[[example]]
name = "accumulate_packed"
path = "../examples/openinfer/accumulate_packed.rs"

[[example]]
name = "ops_accumulate_inplace"
path = "../examples/openinfer/ops_accumulate_inplace.rs"

[[example]]
name = "ops_broadcast_variants"
path = "../examples/openinfer/ops_broadcast_variants.rs"

[[example]]
name = "ops_variants"
path = "../examples/openinfer/ops_variants.rs"

[[example]]
name = "ops_v2"
path = "../examples/openinfer/ops_v2.rs"

[[example]]
name = "cast"
path = "../examples/openinfer/cast.rs"