[package]
name = "openinfer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
openinfer-dsl = { path = "../openinfer-dsl" }
rand = "0.8"
memmap2 = "0.9"
rayon = "*"
once_cell = "1"
bytemuck = { version = "1", features = ["derive"] }
ash = "0.38.0"

[build-dependencies]
openinfer-generator = { path = "../openinfer-generator" }

[dev-dependencies]

[features]
vulkan = []

[[test]]
name = "openinfer"
path = "../tests/openinfer/openinfer.rs"

[[example]]
name = "mlp_regression"
path = "../examples/openinfer/mlp_regression.rs"

[[example]]
name = "residual_mlp_stack"
path = "../examples/openinfer/residual_mlp_stack.rs"

[[example]]
name = "linear_attention"
path = "../examples/openinfer/linear_attention.rs"

[[example]]
name = "moe_routing"
path = "../examples/openinfer/moe_routing.rs"

[[example]]
name = "streaming_pipeline"
path = "../examples/openinfer/streaming_pipeline.rs"

[[example]]
name = "kv_cache_decode"
path = "../examples/openinfer/kv_cache_decode.rs"

[[example]]
name = "online_weight_update"
path = "../examples/openinfer/online_weight_update.rs"

[[example]]
name = "quantized_linear"
path = "../examples/openinfer/quantized_linear.rs"

[[example]]
name = "stability_guard"
path = "../examples/openinfer/stability_guard.rs"

[[example]]
name = "cache_window_slice"
path = "../examples/openinfer/cache_window_slice.rs"